--- a/js_generation.ipynb
+++ b/js_generation.ipynb
@@ -9,17 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
+    "path = \"image/img_elias/test1/P2/\"\n",
+    "\n",
     "xVal = []\n",
     "yVal = []\n",
-    "f = open(\"image/img_elias/test1/P1/data.txt\", \"r\")\n",
+    "f = open(path + \"data.txt\", \"r\")\n",
     "iterator = 0\n",
     "for line in f:\n",
+    "    if iterator == 0:\n",
+    "        iterator += 1\n",
+    "        continue\n",
     "    coord = line.split(' ')\n",
     "    x = coord[0]\n",
     "    e = x.find('e')\n",
@@ -42,7 +47,7 @@
     "    iterator += 1\n",
     "    xVal.append(round(x_number, 2))\n",
     "    yVal.append(round(y_number, 2))\n",
-    "        "
+    "    "
    ]
   },
   {
@@ -54,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +73,7 @@
     "for i in range(len(xVal)):\n",
     "    txt += 'data[' + str(i) + '] = new Points(' + str(xVal[i]) + ', ' + str(yVal[i]) + ');\\n'\n",
     "\n",
-    "f= open(\"image/img_elias/test1/P1/script.js\",\"w+\")\n",
+    "f= open(path + \"script.js\",\"w+\")\n",
     "f.write(txt)\n",
     "f.close()"
    ]
